--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,6 +30,8 @@ language: fi
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: 'Oja-Pappalan joulu
 
   Tapain-kuvia Etelä-Pohjanmaalta 1870-luvulta'
